# examples

./: .rerobots-ci.yml  .ruff.toml  .travis.yml  README.md  faceprint.ipynb  faceprint_misty1devel.ipynb  handmotion.ipynb  mistyrest.py
misty2/: facetraining.py  mistyrest.java  mistyrest.py  test-requirements.txt
multi_kobuki/ROS1/: Dockerfile-ros1-wander
multi_kobuki/ROS1/multi_kobuki_wander/: CMakeLists.txt  package.xml
multi_kobuki/ROS1/multi_kobuki_wander/launch/: wander.launch
multi_kobuki/ROS1/multi_kobuki_wander/nodes/: rev.py
